2010-12-27 gabriel
* Moved all roles from erp5_web_ung_core for this bt5