@@ -1,5 +1,6 @@
 Contribution Tool
 Document Module
+Knowledge Pad Module
 Person
 Person Module
 Spreadsheet
@@ -8,4 +9,3 @@ Web Illustration
 Web Page
 Web Page Module
 Web Table
-Knowledge Pad Module
