@@ -1,2 +1,5 @@
+2011-03-01 gabriel
+* Initial commit to testUNGSecurity
+
 2010-12-27 gabriel
 * Moved all roles from erp5_web_ung_core for this bt5
